projekat_minimum/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    6 parameter: %empty
    7          | _TYPE _ID

    8 body: _LBRACKET variable_list statement_list _RBRACKET

    9 variable_list: %empty
   10              | variable_list variable

   11 $@2: %empty

   12 variable: _TYPE $@2 var_poss _SEMICOLON

   13 var_poss: _ID
   14         | _ID _ASSIGN literal
   15         | var_poss _COMMA _ID
   16         | var_poss _COMMA _ID _ASSIGN literal

   17 statement_list: %empty
   18               | statement_list statement

   19 statement: compound_statement
   20          | assignment_statement
   21          | if_statement
   22          | return_statement
   23          | select_statement
   24          | inc_statement

   25 inc_statement: _ID _INC_OP _SEMICOLON

   26 compound_statement: _LBRACKET statement_list _RBRACKET

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   28 num_exp: exp
   29        | num_exp _AROP exp

   30 exp: literal
   31    | _ID
   32    | function_call
   33    | _LPAREN num_exp _RPAREN
   34    | _ID _INC_OP

   35 literal: _INT_NUMBER
   36        | _UINT_NUMBER

   37 $@3: %empty

   38 function_call: _ID $@3 _LPAREN argument _RPAREN

   39 argument: %empty
   40         | num_exp

   41 if_statement: if_part
   42             | if_part _ELSE statement

   43 if_part: _IF _LPAREN rel_exp _RPAREN statement

   44 rel_exp: num_exp _RELOP num_exp

   45 return_statement: _RETURN num_exp _SEMICOLON

   46 select_statement: _SELECT arg_select _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

   47 arg_select: _ID
   48           | arg_select _COMMA _ID


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 5 7 12
_IF (259) 43
_ELSE (260) 42
_RETURN (261) 45
_ID (262) 5 7 13 14 15 16 25 27 31 34 38 46 47 48
_INT_NUMBER (263) 35
_UINT_NUMBER (264) 36
_LPAREN (265) 5 33 38 43 46
_RPAREN (266) 5 33 38 43 46
_LBRACKET (267) 8 26
_RBRACKET (268) 8 26
_ASSIGN (269) 14 16 27
_SEMICOLON (270) 12 25 27 45 46
_AROP (271) 29
_RELOP (272) 44
_SELECT (273) 46
_FROM (274) 46
_WHERE (275) 46
_COMMA (276) 15 16 48
_INC_OP (277) 25 34
ONLY_IF (278)


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1, on right: 0
function_list (26)
    on left: 2 3, on right: 1 3
function (27)
    on left: 5, on right: 2 3
$@1 (28)
    on left: 4, on right: 5
parameter (29)
    on left: 6 7, on right: 5
body (30)
    on left: 8, on right: 5
variable_list (31)
    on left: 9 10, on right: 8 10
variable (32)
    on left: 12, on right: 10
$@2 (33)
    on left: 11, on right: 12
var_poss (34)
    on left: 13 14 15 16, on right: 12 15 16
statement_list (35)
    on left: 17 18, on right: 8 18 26
statement (36)
    on left: 19 20 21 22 23 24, on right: 18 42 43
inc_statement (37)
    on left: 25, on right: 24
compound_statement (38)
    on left: 26, on right: 19
assignment_statement (39)
    on left: 27, on right: 20
num_exp (40)
    on left: 28 29, on right: 27 29 33 40 44 45
exp (41)
    on left: 30 31 32 33 34, on right: 28 29
literal (42)
    on left: 35 36, on right: 14 16 30
function_call (43)
    on left: 38, on right: 32
$@3 (44)
    on left: 37, on right: 38
argument (45)
    on left: 39 40, on right: 38
if_statement (46)
    on left: 41 42, on right: 21
if_part (47)
    on left: 43, on right: 41 42
rel_exp (48)
    on left: 44, on right: 43 46
return_statement (49)
    on left: 45, on right: 22
select_statement (50)
    on left: 46, on right: 23
arg_select (51)
    on left: 47 48, on right: 46 48


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


State 10

    7 parameter: _TYPE . _ID

    _ID  shift, and go to state 12


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 13


State 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


State 13

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 14

    body  go to state 15


State 14

    8 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 9 (variable_list)

    variable_list  go to state 16


State 15

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 16

    8 body: _LBRACKET variable_list . statement_list _RBRACKET
   10 variable_list: variable_list . variable

    _TYPE  shift, and go to state 17

    $default  reduce using rule 17 (statement_list)

    variable        go to state 18
    statement_list  go to state 19


State 17

   12 variable: _TYPE . $@2 var_poss _SEMICOLON

    $default  reduce using rule 11 ($@2)

    $@2  go to state 20


State 18

   10 variable_list: variable_list variable .

    $default  reduce using rule 10 (variable_list)


State 19

    8 body: _LBRACKET variable_list statement_list . _RBRACKET
   18 statement_list: statement_list . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _ID        shift, and go to state 23
    _LBRACKET  shift, and go to state 24
    _RBRACKET  shift, and go to state 25
    _SELECT    shift, and go to state 26

    statement             go to state 27
    inc_statement         go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33
    select_statement      go to state 34


State 20

   12 variable: _TYPE $@2 . var_poss _SEMICOLON

    _ID  shift, and go to state 35

    var_poss  go to state 36


State 21

   43 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 37


State 22

   45 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 42
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


State 23

   25 inc_statement: _ID . _INC_OP _SEMICOLON
   27 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 46
    _INC_OP  shift, and go to state 47


State 24

   26 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 17 (statement_list)

    statement_list  go to state 48


State 25

    8 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 8 (body)


State 26

   46 select_statement: _SELECT . arg_select _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

    _ID  shift, and go to state 49

    arg_select  go to state 50


State 27

   18 statement_list: statement_list statement .

    $default  reduce using rule 18 (statement_list)


State 28

   24 statement: inc_statement .

    $default  reduce using rule 24 (statement)


State 29

   19 statement: compound_statement .

    $default  reduce using rule 19 (statement)


State 30

   20 statement: assignment_statement .

    $default  reduce using rule 20 (statement)


State 31

   21 statement: if_statement .

    $default  reduce using rule 21 (statement)


State 32

   41 if_statement: if_part .
   42             | if_part . _ELSE statement

    _ELSE  shift, and go to state 51

    $default  reduce using rule 41 (if_statement)


State 33

   22 statement: return_statement .

    $default  reduce using rule 22 (statement)


State 34

   23 statement: select_statement .

    $default  reduce using rule 23 (statement)


State 35

   13 var_poss: _ID .
   14         | _ID . _ASSIGN literal

    _ASSIGN  shift, and go to state 52

    $default  reduce using rule 13 (var_poss)


State 36

   12 variable: _TYPE $@2 var_poss . _SEMICOLON
   15 var_poss: var_poss . _COMMA _ID
   16         | var_poss . _COMMA _ID _ASSIGN literal

    _SEMICOLON  shift, and go to state 53
    _COMMA      shift, and go to state 54


State 37

   43 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 55
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45
    rel_exp        go to state 56


State 38

   31 exp: _ID .
   34    | _ID . _INC_OP
   38 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _INC_OP  shift, and go to state 57

    _LPAREN   reduce using rule 37 ($@3)
    $default  reduce using rule 31 (exp)

    $@3  go to state 58


State 39

   35 literal: _INT_NUMBER .

    $default  reduce using rule 35 (literal)


State 40

   36 literal: _UINT_NUMBER .

    $default  reduce using rule 36 (literal)


State 41

   33 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 59
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


State 42

   29 num_exp: num_exp . _AROP exp
   45 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 60
    _AROP       shift, and go to state 61


State 43

   28 num_exp: exp .

    $default  reduce using rule 28 (num_exp)


State 44

   30 exp: literal .

    $default  reduce using rule 30 (exp)


State 45

   32 exp: function_call .

    $default  reduce using rule 32 (exp)


State 46

   27 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 62
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


State 47

   25 inc_statement: _ID _INC_OP . _SEMICOLON

    _SEMICOLON  shift, and go to state 63


State 48

   18 statement_list: statement_list . statement
   26 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _ID        shift, and go to state 23
    _LBRACKET  shift, and go to state 24
    _RBRACKET  shift, and go to state 64
    _SELECT    shift, and go to state 26

    statement             go to state 27
    inc_statement         go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33
    select_statement      go to state 34


State 49

   47 arg_select: _ID .

    $default  reduce using rule 47 (arg_select)


State 50

   46 select_statement: _SELECT arg_select . _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON
   48 arg_select: arg_select . _COMMA _ID

    _FROM   shift, and go to state 65
    _COMMA  shift, and go to state 66


State 51

   42 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _ID        shift, and go to state 23
    _LBRACKET  shift, and go to state 24
    _SELECT    shift, and go to state 26

    statement             go to state 67
    inc_statement         go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33
    select_statement      go to state 34


State 52

   14 var_poss: _ID _ASSIGN . literal

    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40

    literal  go to state 68


State 53

   12 variable: _TYPE $@2 var_poss _SEMICOLON .

    $default  reduce using rule 12 (variable)


State 54

   15 var_poss: var_poss _COMMA . _ID
   16         | var_poss _COMMA . _ID _ASSIGN literal

    _ID  shift, and go to state 69


State 55

   29 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 61
    _RELOP  shift, and go to state 70


State 56

   43 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 71


State 57

   34 exp: _ID _INC_OP .

    $default  reduce using rule 34 (exp)


State 58

   38 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 72


State 59

   29 num_exp: num_exp . _AROP exp
   33 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 73
    _AROP    shift, and go to state 61


State 60

   45 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 45 (return_statement)


State 61

   29 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    exp            go to state 74
    literal        go to state 44
    function_call  go to state 45


State 62

   27 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   29 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 75
    _AROP       shift, and go to state 61


State 63

   25 inc_statement: _ID _INC_OP _SEMICOLON .

    $default  reduce using rule 25 (inc_statement)


State 64

   26 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 26 (compound_statement)


State 65

   46 select_statement: _SELECT arg_select _FROM . _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

    _ID  shift, and go to state 76


State 66

   48 arg_select: arg_select _COMMA . _ID

    _ID  shift, and go to state 77


State 67

   42 if_statement: if_part _ELSE statement .

    $default  reduce using rule 42 (if_statement)


State 68

   14 var_poss: _ID _ASSIGN literal .

    $default  reduce using rule 14 (var_poss)


State 69

   15 var_poss: var_poss _COMMA _ID .
   16         | var_poss _COMMA _ID . _ASSIGN literal

    _ASSIGN  shift, and go to state 78

    $default  reduce using rule 15 (var_poss)


State 70

   44 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 79
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45


State 71

   43 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 21
    _RETURN    shift, and go to state 22
    _ID        shift, and go to state 23
    _LBRACKET  shift, and go to state 24
    _SELECT    shift, and go to state 26

    statement             go to state 80
    inc_statement         go to state 28
    compound_statement    go to state 29
    assignment_statement  go to state 30
    if_statement          go to state 31
    if_part               go to state 32
    return_statement      go to state 33
    select_statement      go to state 34


State 72

   38 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    $default  reduce using rule 39 (argument)

    num_exp        go to state 81
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45
    argument       go to state 82


State 73

   33 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 33 (exp)


State 74

   29 num_exp: num_exp _AROP exp .

    $default  reduce using rule 29 (num_exp)


State 75

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 27 (assignment_statement)


State 76

   46 select_statement: _SELECT arg_select _FROM _ID . _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON

    _WHERE  shift, and go to state 83


State 77

   48 arg_select: arg_select _COMMA _ID .

    $default  reduce using rule 48 (arg_select)


State 78

   16 var_poss: var_poss _COMMA _ID _ASSIGN . literal

    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40

    literal  go to state 84


State 79

   29 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 61

    $default  reduce using rule 44 (rel_exp)


State 80

   43 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 43 (if_part)


State 81

   29 num_exp: num_exp . _AROP exp
   40 argument: num_exp .

    _AROP  shift, and go to state 61

    $default  reduce using rule 40 (argument)


State 82

   38 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 85


State 83

   46 select_statement: _SELECT arg_select _FROM _ID _WHERE . _LPAREN rel_exp _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 86


State 84

   16 var_poss: var_poss _COMMA _ID _ASSIGN literal .

    $default  reduce using rule 16 (var_poss)


State 85

   38 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 38 (function_call)


State 86

   46 select_statement: _SELECT arg_select _FROM _ID _WHERE _LPAREN . rel_exp _RPAREN _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 55
    exp            go to state 43
    literal        go to state 44
    function_call  go to state 45
    rel_exp        go to state 87


State 87

   46 select_statement: _SELECT arg_select _FROM _ID _WHERE _LPAREN rel_exp . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 88


State 88

   46 select_statement: _SELECT arg_select _FROM _ID _WHERE _LPAREN rel_exp _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 89


State 89

   46 select_statement: _SELECT arg_select _FROM _ID _WHERE _LPAREN rel_exp _RPAREN _SEMICOLON .

    $default  reduce using rule 46 (select_statement)
